--- a/tmux.conf
+++ b/tmux.conf
@@ -12,7 +12,7 @@ set -g status-left "#S #[fg=yellow]#I #[fg=cyan]#P #[fg=white]» #{pane_current_
 # Right side of status bar
 set -g status-right-style bg=black,fg=cyan
 set -g status-right-length 40
-set -g status-right "#[fg=white]« #[fg=yellow]%H:%M:%S #[fg=green]%d-%b-%y"
+set -g status-right "#[fg=white]#(whoami) « #[fg=yellow]%H:%M:%S #[fg=green]%d-%b-%y"
 
 # Window status
 set -g window-status-format " #I:#W#F "
