Fix terminal copy/paste on debian

--- a/tmux.conf
+++ b/tmux.conf
@@ -58,3 +58,7 @@ set -g mode-style bg=red,fg=default
 
 # Allow clicking
 set -g mouse on
+
+# Copy into clipboard on linux
+# Requires: apt install xclip
+bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "xclip -se c -i"
