Add alacritty timeout hack to tmux config

--- a/tmux.conf
+++ b/tmux.conf
@@ -62,3 +62,8 @@ set -g mouse on
 # Copy into clipboard on linux
 # Requires: apt install xclip
 bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "xclip -se c -i"
+
+# https://unix.stackexchange.com/questions/23138/esc-key-causes-a-small-delay-in-terminal-due-to-its-alt-behavior
+set -s escape-time 0
+
+set -g default-terminal "alacritty"
