Use nvim for git merge

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -6,5 +6,7 @@
   excludesfile = ~/.config/git/gitignore_global
 [diff]
   wsErrorHighlight = all
+[merge]
+  tool = nvim -d
 [init]
   defaultBranch = main
