--- a/mise/.config/mise/config.toml
+++ b/mise/.config/mise/config.toml
@@ -8,3 +8,4 @@ cargo-binstall = "latest"
 "cargo:starship" = "latest"
 "cargo:ripgrep" = "latest"
 "cargo:tealdeer" = "latest"
+"github:sharkdp/fd" = "latest"
