--- a/mise/.config/mise/config.toml
+++ b/mise/.config/mise/config.toml
@@ -9,3 +9,4 @@ cargo-binstall = "latest"
 "cargo:ripgrep" = "latest"
 "cargo:tealdeer" = "latest"
 "github:sharkdp/fd" = "latest"
+"github:junegunn/fzf" = "latest"
