Get awscli through mise

--- a/mise/.config/mise/config.toml
+++ b/mise/.config/mise/config.toml
@@ -10,3 +10,4 @@ cargo-binstall = "latest"
 "cargo:tealdeer" = "latest"
 "github:sharkdp/fd" = "latest"
 "github:junegunn/fzf" = "latest"
+awscli = "latest"
